--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "composer-github-hook",
   "description": "This is a hook",
   "require": {
-    "marktopper/composer-hook-dependency-1": "dev-master"
+    "marktopper/composer-hook-dependency-1": "~1.0"
   },
   "autoload": {
     "psr-4": {
